devops/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultupload-backend
  labels:
    app: vaultupload
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: vaultupload-backend
