devops/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultupload-frontend
  labels:
    app: vaultupload
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: vaultupload-frontend
